5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4354/executions/1596_1015.log
== TEST (2019-03-21 22:14:34) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numeros_inteiros1 = int(input(Digite o primeiro numero: ))
numeros_inteiros2 = int(input(Digite o segundo numero: ))
numeros_inteiros3 = int(input(Digite o terceiro numero: ))
numero_max = max(numeros_inteiros1,numeros_inteiros2,numeros_inteiros3)
numero_min = min(numeros_inteiros1,numeros_inteiros2,numeros_inteiros3)
numero_medio = (numeros_inteiros1 + numeros_inteiros2 + numeros_inteiros3) - (numero_max + numero_min)
print(numero_min)
print(numero_medio)
print(numero_max)
										
-- ERROR:
File "XXXX", line 4
    numeros_inteiros1 = int(input(Digite o primeiro numero: ))
                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 22:14:58) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numeros_inteiros1 = int(input("Digite o primeiro numero: "))
numeros_inteiros2 = int(input("Digite o segundo numero: "))
numeros_inteiros3 = int(input("Digite o terceiro numero: "))
numero_max = max(numeros_inteiros1,numeros_inteiros2,numeros_inteiros3)
numero_min = min(numeros_inteiros1,numeros_inteiros2,numeros_inteiros3)
numero_medio = (numeros_inteiros1 + numeros_inteiros2 + numeros_inteiros3) - (numero_max + numero_min)
print(numero_min)
print(numero_medio)
print(numero_max)
										
-- OUTPUT:
-2
0
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 22:15:30) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
numeros_inteiros1 = int(input("Digite o primeiro numero: "))
numeros_inteiros2 = int(input("Digite o segundo numero: "))
numeros_inteiros3 = int(input("Digite o terceiro numero: "))
numero_max = max(numeros_inteiros1,numeros_inteiros2,numeros_inteiros3)
numero_min = min(numeros_inteiros1,numeros_inteiros2,numeros_inteiros3)
numero_medio = (numeros_inteiros1 + numeros_inteiros2 + numeros_inteiros3) - (numero_max + numero_min)
print(numero_min)
print(numero_medio)
print(numero_max)
										
-- EXECUTION TIME:
0.146238
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
